Ajustes de validação e funcionamento das classes.
Ajustes na escrita de algumas classes e métodos que continham erro de digitação.